// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenOrders should render correctly 1`] = `
<div
  className="open-orders"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h3>
    Open orders
  </h3>
  <div
    className="open-orders__table-wrap"
  >
    <Table>
      <TableHead>
        <Row
          isHead={true}
          size="small"
        >
          <CellHead>
            Time
          </CellHead>
          <CellHead>
            Id
          </CellHead>
          <CellHead>
            Type
          </CellHead>
          <CellHead>
            Buy
          </CellHead>
          <CellHead>
            Sell
          </CellHead>
          <CellHead>
            Price
          </CellHead>
          <CellHead>
            Buy Quantity
          </CellHead>
          <CellHead>
            Sell Quantity
          </CellHead>
          <CellHead />
        </Row>
      </TableHead>
      <TableBody>
        <Row
          key="12322"
          size="small"
        >
          <CellBody>
            01. Jan 1970 01:00
          </CellBody>
          <CellBody>
            12322
          </CellBody>
          <CellBody>
            <span
              className="open-orders__cell open-orders__cell--red"
            >
              sell
            </span>
          </CellBody>
          <CellBody>
            WETH
          </CellBody>
          <CellBody>
            MLN
          </CellBody>
          <CellBody>
            0.0672
          </CellBody>
          <CellBody>
            0.1423
          </CellBody>
          <CellBody>
            2.1180
          </CellBody>
          <CellBody>
            <Button
              disabled={false}
              onClick={[Function]}
              size="small"
              style="secondary"
            >
              Cancel
            </Button>
          </CellBody>
        </Row>
        <Row
          key="29468"
          size="small"
        >
          <CellBody>
            01. Jan 1970 01:00
          </CellBody>
          <CellBody>
            29468
          </CellBody>
          <CellBody>
            <span
              className="open-orders__cell open-orders__cell--red"
            >
              sell
            </span>
          </CellBody>
          <CellBody>
            WETH
          </CellBody>
          <CellBody>
            MLN
          </CellBody>
          <CellBody>
            0.0672
          </CellBody>
          <CellBody>
            0.1423
          </CellBody>
          <CellBody>
            2.1180
          </CellBody>
          <CellBody>
            <Button
              disabled={false}
              onClick={[Function]}
              size="small"
              style="secondary"
            >
              Cancel
            </Button>
          </CellBody>
        </Row>
      </TableBody>
    </Table>
  </div>
</div>
`;

exports[`OpenOrders should render correctly without orders 1`] = `
<div
  className="open-orders"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h3>
    Open orders
  </h3>
  <div
    className="open-orders__table-wrap"
  >
    <p>
      No open orders
    </p>
  </div>
</div>
`;
